# Aerobat_Simulation_ROS1

./: .gitignore  MUJOCO_LOG.TXT
devel/: .catkin  .rosinstall  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/include/ros_flappy_sim/: CameraFrame.h
devel/lib/pkgconfig/: ros_flappy_sim.pc
src/: CMakeLists.txt
src/ros_flappy_sim/: CMakeLists.txt  MUJOCO_LOG.TXT  README.md  package.xml
src/ros_flappy_sim/assets/environments/: Cage_360.mtl
src/ros_flappy_sim/assets/meshes_v8/: CAVE.stl  guard.stl
src/ros_flappy_sim/launch/: flappy_sim.launch
src/ros_flappy_sim/msg/: Axes.msg  CameraFrame.msg
src/ros_flappy_sim/scripts/: mujoco_sensor_publisher.py  run_sim.zsh
src/ros_flappy_sim/src/: Controller_PID_v1.py  Controller_PID_v2.py  MUJOCO_LOG.TXT  OLControl.py  aero_force_v1.py  aero_force_v2.py  aero_force_v3.py  dual_render_backup.py  dual_render_test.py  fit_flapping_params.py  flapping_controller.py  render_test.py  ros_teleop_sim.py  teleop_sim.py  teleop_sim_threaded.py  v10_flappy.py  v10_flappyOG.py  v11_flappy.py  v9_flappy.py
src/ros_flappy_sim/src/mujoco_ros_bridge/: camera_publisher.py  imu_publisher.py  mujoco_ros_bridge.py  utils.py
src/ros_flappy_sim/src/symbolic_functions_faster/: func_create_wing_segmentV2.py  func_wing_tail.py  parameter.py  parameters_old.py
src/ros_flappy_sim/src/utility_functions/: R_body.py  rotation_transformations.py
src/ros_flappy_sim/worlds/: Aerobat_SD.xml  Cage_scene.xml  Flappy_v10_weld.xml  Flappy_v8.xml  Flappy_v9_RB.xml  cage.xml
(+12 files in other folders)
